Added security and error handling.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+spring.application.name=FlightApp
+
+jwt.secret=your-256-bit-secret-key-here-make-it-at-least-32-bytes-long
+
+# Database Connection
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -5,5 +10,7 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
+
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
