Added reservation logic

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,16 +1,13 @@
 spring.application.name=FlightApp
 
-jwt.secret=your-256-bit-secret-key-here-make-it-at-least-32-bytes-long
+jwt.secret=${JWT_SECRET_KEY}
 
 # Database Connection
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-
+spring.datasource.url=jdbc:postgresql://yamanote.proxy.rlwy.net:57865/railway
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=always
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
